assets/scss/global/_header.scss
.header {
    &__title {
        color: $primary;
        display: block;
        font-size: 4rem;
        font-weight: $fw-reg;
        letter-spacing: -4px;
        line-height: 1;
        margin: 0;
        text-align: center;
        text-transform: uppercase;

        @include media-breakpoint-up(md) {
            text-align: left;
        }

        a {
            text-decoration: none;
        }
    }

    &__nav-col {
        align-items: center;
        display: flex;
        justify-content: center;
        
        @include media-breakpoint-up(md) {
            justify-content: end;
        }

        .menu-primary-container {
            ul {
                margin: 0;
                padding: 0;
    
                li {
                    display: inline-block;
                    list-style: none;
    
                    @include media-breakpoint-up(md) {
                        margin-left: 2rem;
                    }

                    &.current-menu-item {
                        a {
                            color: $blue;
                            text-decoration: underline;
                        }
                    }

                    a {
                        display: inline-block;
                        font-size: 1.25rem;
                        line-height: 1.22;
                        padding: .75rem;
                        text-decoration: none;
    
                        @include media-breakpoint-up(md) {
                            font-size: 1.5rem;
                            padding: .75rem 0;
                        }
    
                        &:hover {
                            color: $blue;
                            text-decoration: underline;
                        }
                    }
                }
            }
        }
    }
}

